# esophageal-cancer-residual-tumor

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: toy_dataset_test.csv  toy_dataset_training.csv
notebooks/: 1_create_toy_example.ipynb  2_test_pipeline.ipynb
src/ct_residual_disease/: __init__.py  main.py
src/ct_residual_disease/data/: __init__.py  io.py  preprocessing.py
src/ct_residual_disease/evaluation/: metrics.py  reporting.py  thresholding.py
src/ct_residual_disease/models/: __init__.py  logistic.py
src/ct_residual_disease/pipelines/: __init__.py  features_pipeline.py  inference_pipeline.py  training_pipeline.py
trained_model/: model.pkl  scaler.pkl  threshold.txt
